--- a/frontend_sl/requirements.txt
+++ b/frontend_sl/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.2
-Django==4.1
+Django==4.0
 sqlparse==0.4.2
 tzdata==2022.2
 django-autoslug==1.9.8
@@ -10,3 +10,4 @@ django-cors-headers==3.13.0
 httpie==3.2.1
 psycopg2==2.9.3
 gunicorn==20.1.0
+django-celery-beat==2.3.0
