--- a/production-docker-compose.yml
+++ b/production-docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - frontend_net
 
   app:
-    container_name: backend-sl
+    container_name: frontend-sl
     command: gunicorn frontend_sl.wsgi:application --bind 0.0.0.0:8000
     build:
       context: ./frontend_sl #
