--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ DB_NAME=
 DB_USER=
 DB_PASS=
 DB_HOST=
-DB_PORT=
-DJANGO_ALLOWED_HOSTS=
+DB_PORT=5432
+DJANGO_ALLOWED_HOSTS=www.social-library-1563.ml social-library-1563.ml 127.0.0.1 [::1]
 
 
 
