--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SECRET_KEY=
-DB_NAME=
-DB_USER=
-DB_PASS=
-DB_HOST=
+SECRET_KEY=django-insecure-_lp!yua6&m7lyu3(ns$%-+#3trb*u-is*!3ybl(i52w!ygbp5)
+DB_NAME=db_sl_name
+DB_USER=swat1563
+DB_PASS=qutaiba159
+DB_HOST=database-sl-1563-pg.cabemt3tcbpx.us-east-2.rds.amazonaws.com
 DB_PORT=5432
 DJANGO_ALLOWED_HOSTS=www.social-library-1563.ml social-library-1563.ml 127.0.0.1 [::1]
 
